Fix vertical alignment

--- a/assets/css/nav-bar.css
+++ b/assets/css/nav-bar.css
@@ -44,10 +44,11 @@
     margin: 0;
     display: inline-block;
     list-style: none;
+    padding-top: 1.2rem;
 }
 
 .nav-content nav ul li {
-    margin-top: 1.4em;
+
 }
 
 .nav-content nav ul li a {
